<resources>
    <string name="app_name">txtBravo</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_logout">Logout</string>
    <string name="action_cancel">Cancel</string>
    <string name="image_preview">Image Preview</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="inbox">Inbox</string>
    <string name="action_select">Pick</string>
    <string name="action_sync_category">Sync Category</string>
    <string name="action_delete">Delete</string>
    <string name="action_sync_sub_category">Sync Sub Category</string>
    <string name="action_advertisement">Advertisement</string>
    <string name="action_sync_product">Sync Product</string>
    <string name="action_prescription">Prescription</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_online">ONLINE</string>
    <string name="action_clear">Clear Chat</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_add_product">ADD</string>
    <string name="action_capture">Capture Image</string>
    <string name="action_browse">From Gallery</string>
    <string name="action_new_store">REGISTER STORE</string>
    <string name="action_call">CALL NOW</string>
    <string name="action_chat">CHAT</string>
    <string name="action_existing_store">EXISTING STORE</string>
    <string name="action_forgot_password">FORGOT PASSWORD</string>
    <string name="button_done">Done</string>
    <string name="button_next">Save and Continue</string>
    <string name="hint_enter_mobile_no">Enter Mobile No *</string>
    <string name="hint_enter_email">Enter E-Mail</string>
    <string name="hint_enter_alternate_mobile_no">Enter Alternate Mobile No</string>
    <string name="hint_enter_store_name">Enter Store Name *</string>
    <string name="hint_enter_owner_name">Enter Owner Name *</string>
    <string name="hint_enter_password">Enter Password *</string>
    <string name="hint_enter_product_name">Enter Product Name *</string>
    <string name="hint_enter_product_description">Enter Brief Description</string>
    <string name="hint_enter_weight">Weight *</string>
    <string name="hint_enter_price">MRP *</string>
    <string name="hint_enter_min_amount">Min. Amount</string>
    <string name="hint_enter_delivery_charge">Delivery Charge</string>
    <string name="hint_enter_discount_price">Discount Price *</string>
    <string name="hint_enter_unit">Unit *</string>
    <string name="hint_enter_confirm_password">Re-Enter Password *</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_submit">Submit</string>
    <string name="button_send">Bid Now</string>
    <string name="button_forgot_password">Forgot Password ? Click Here</string>
    <string name="hint_new_password">Enter New Password *</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_save_product">Save Product</string>
    <string name="button_save_profile">Save Profile</string>
    <string name="button_save_configuration">Save Configuration</string>
    <string name="title_confirmation_code">OTP not Verifying ? Click Here</string>
    <string name="hint_enter_house_no">Enter House Name and No *</string>
    <string name="hint_enter_address">Enter Address *</string>
    <string name="hint_enter_state">Enter State *</string>
    <string name="hint_enter_city">Enter City *</string>
    <string name="hint_enter_landmark">Enter Landmark *</string>
    <string name="hint_enter_country">Enter Country *</string>
    <string name="hint_enter_pincode">Enter Pincode *</string>
    <string name="hint_capture_image">Capture</string>
    <string name="hint_type_message">Type a message</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: Device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: Device successfully unregistered!</string>
    <string name="gcm_message">From GCM: You got message!</string>
    <string name="gcm_error">From GCM: Error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: Server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on server.</string>
    <string name="server_registered">From Server: Successfully added device!</string>
    <string name="server_unregistered">From Server: Successfully removed device!</string>
    <string name="server_register_error">Could not register device on server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduction_para_1">Thank you for downloading/using txtBravo</string>
    <string name="introduction_para_2">The following Terms &amp; Conditions is an electronic document in terms of the Information Technology Act, 2000 and rules made there under and the amended provisions pertaining to the electronic documents/records in various statutes as amended by the Information Technology Act, 2000.</string>
    <string name="introduction_para_3">Please read the following Terms &amp; Conditions very carefully as it is intended to make you aware of your legal rights and liability with respect to your access to and use of the txtBravo website at <![CDATA[<a href="http://www.txtbravo.com">http://www.txtbravo.com</a>]]> (the "Site") and any related mobile/electronic device or software applications (hereinafter collectively referred as "txtBravo Platform"). These terms &amp; conditions are effective from the time you log in to txtBravo Platform.</string>
    <string name="introduction_para_4">By accessing txtBravo Platform, you are agreeing to the following terms &amp; conditions and unconditionally agreeing to any potential guidelines and/or amendments. You may cease to use txtBravo Platform, if you do not accept the Terms &amp; Conditions. You may not access txtBravo Platform and immediately terminate your use of txtBravo Platform. Your use of txtBravo Platform is at your own risk, including the risk that you might be exposed to content that is inappropriate, or otherwise objectionable.</string>
    <string name="definition_para_1">User - You or Your or User refers to you, as a user of the txtBravo Platform. A user is someone who uses the txtBravo Platform including the business, for the purpose of communicating, sharing, displaying, publishing, transacting, or uploading information including but not limited to pictures, videos, messages and reviews.</string>
    <string name="definition_para_2">Content - Information that User upload, transmit, share or display through txtBravo Platform, (collectively referred as "Contents") including but not limited to any photos, profiles (including Your name and image), messages, information, text, video, music, and third party links.</string>
    <string name="acceptance_para_1">The Terms &amp; Conditions (hereinafter referred as the "Agreement") is a legal binding contract between You, and Educing Technologies Pvt. Ltd ("Educing"), having its registered office at  House no  59 A, 2nd floor,B R Mazumdar path, Baghorbari,Panjabari , Guwahati-781037. All the services are provided through txtBravo Platform by Educing under the business unit named "txtBravo" ("We"/ "Us"/ "txtBravo"/ "Educing"). Therefore, all the legal privileges under the following terms &amp; conditions shall add up to the benefit of Educing.</string>
    <string name="modification_para_1">txtBravo reserves the right at any time and/or from time to time to interrupt, restrict (without cause and without notice to You), modify or discontinue, temporarily or permanently, txtBravo Platform with or without any notice. You agree that txtBravo shall not be liable to You or to any third party for any modification, suspension or discontinuance of the Application or the Site.</string>
    <string name="privacy_para_1">txtBravo has established a Privacy Policy that elucidate all users how their information is collected and used. By accepting the Agreement, you are also accepting and agreeing to be bound by the Privacy Policy. You can read and view Privacy Policy at <![CDATA[<a href="http://www.txtbravo.com/privacy">http://www.txtbravo.com/privacy</a>]]></string>
    <string name="eligibility_para_1">txtBravo services are available for users who are competent to contract. You represent that you are 18 years of age and above and a person who can enter into a legally binding contract, and or are not barred by any law for the time being in force.</string>
    <string name="services_para_1">txtBravo hereby grants you a limited, personal, revocable, non-transferable, non-exclusive license to use and access txtBravo Platform as set forth in the Agreement.You agree and understand that excluding services clearly indicated as being supplied by txtBravo, we do not endorse, market, operate, control, or promote any information, products or services on txtBravo Platform in any manner. You also agree and understand that txtBravo cannot and does not guarantee or warrant the content available through txtBravo Platform. txtBravo disclaims any liability for any information that may have become outdated at the time of provision of information or since the last time the particular piece of information was updated. txtBravo reserves the right to make changes and corrections to any part of the content of this website at any time without prior notice. txtBravo does not guarantee the prices or any other information including any deficiency of goods or services provided by Business on txtBravo Platform.You expressly agree that your mere use of txtBravo Platform does not result in a contractual relationship with the Business, and in the event that you procure and/or use the Business goods or services, the terms of such arrangement will be determined by your agreement with the Business, if any.We disclaim any liability and will not be responsible for a failure of specific providers of goods and services listed on txtBravo Platform to perform or otherwise comply with the information provided by txtBravo or the Business. txtBravo  will be under no contractual or other  with Business in relation to the provision of Services. We expressly disclaim any relationship of agency, employment or other arrangement with the Business, and do not act for or on behalf of Business.</string>
</resources>