<LinearLayout
    android:id="@+id/linear_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/reg_background"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <EditText
        android:id="@+id/editStoreName"
        style="@style/CustomEditTextStyle"
        android:hint="@string/hint_enter_store_name"
        android:singleLine="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:maxLength="50"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/ic_store_white_24dp" />

    <EditText
        android:id="@+id/editPhoneNumber"
        style="@style/CustomEditTextStyle"
        android:hint="@string/hint_enter_mobile_no"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:maxLength="10"
        android:digits="1234567890"
        android:inputType="phone"
        android:singleLine="true"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/ic_cellphone_iphone_white_24dp" />

    <EditText
        android:id="@+id/editPassword"
        style="@style/CustomEditTextStyle"
        android:hint="@string/hint_enter_password"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/ic_key_white_24dp" />


    <EditText
        android:id="@+id/editConfirmPassword"
        style="@style/CustomEditTextStyle"
        android:hint="@string/hint_enter_confirm_password"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:maxLength="15"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/ic_key_white_24dp" />

    <Button
        android:id="@+id/btnRegister"
        android:onClick="onClick"
        style="@style/CustomButtonStyle"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/button_register" />

    <Button
        android:id="@+id/btnConfirmationCode"
        style="@style/LinkButtonStyle"
        android:onClick="onClick"
        android:textColor="@android:color/white"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        android:text="@string/title_confirmation_code" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_gravity="center_horizontal|center_vertical" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

</LinearLayout>
