<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background" >

    <LinearLayout
        android:id="@+id/linear_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/editPhoneNumber"
            style="@style/CustomEditTextStyle"
            android:hint="@string/hint_enter_mobile_no"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="5dp"
            android:digits="1234567890"
            android:singleLine="true"
            android:inputType="phone"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:drawableStart="@drawable/ic_cellphone_iphone_white_24dp" />


        <Button
            android:id="@+id/btnSubmit"
            android:onClick="onClick"
            style="@style/CustomButtonStyle"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/button_submit" />

        <Button
            android:id="@+id/btnConfirmationCode"
            style="@style/LinkButtonStyle"
            android:onClick="onClick"
            android:textColor="@android:color/white"
            android:layout_gravity="center|bottom"
            android:visibility="gone"
            android:text="@string/title_confirmation_code" />


        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            style="?android:attr/progressBarStyleLarge"
            android:visibility="gone"
            android:layout_gravity="center_horizontal|center_vertical" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

    </LinearLayout>

</RelativeLayout>