<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/quickreturn_coordinator"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/layout_main" >


        <ImageView
            android:id="@+id/imgLogo"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/logo" />


        <EditText
            android:id="@+id/editNewPassword"
            style="@style/CustomEditTextStyle"
            android:hint="@string/hint_new_password"
            android:layout_marginTop="10dp"
            android:inputType="numberPassword"
            android:maxLength="255"
            android:drawableStart="@drawable/ic_key_grey600_24dp" />


        <EditText
            android:id="@+id/editConfirmPassword"
            style="@style/CustomEditTextStyle"
            android:hint="@string/hint_enter_confirm_password"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:inputType="numberPassword"
            android:maxLength="255"
            android:drawableStart="@drawable/ic_key_grey600_24dp" />


        <Button
            android:id="@+id/btnChangePassword"
            android:onClick="onClick"
            style="@style/CustomButtonStyle"
            android:text="@string/button_change_password" />


        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            style="?android:attr/progressBarStyleLarge"
            android:visibility="gone"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>